syntax = "proto3";

package api.accountsservice;

option go_package = "personsservice/api/accountsservice;accountsservice";
option java_multiple_files = true;
option java_package = "api.accountsservice";

service Account {
    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountReply);
    rpc UpdateAccount (UpdateAccountRequest) returns (UpdateAccountReply);
    rpc DeleteAccount (DeleteAccountRequest) returns (DeleteAccountReply);
    rpc GetAccount (GetAccountRequest) returns (GetAccountReply);
    rpc ListAccount (ListAccountRequest) returns (ListAccountReply);
}

message CreateAccountRequest {
    string username = 1;
}
message CreateAccountReply {
    string accountID = 1;
}

message UpdateAccountRequest {}
message UpdateAccountReply {}

message DeleteAccountRequest {}
message DeleteAccountReply {}

message GetAccountRequest {}
message GetAccountReply {}

message ListAccountRequest {}
message ListAccountReply {}